Extract the identity endpoints to @soid/core and @soid/koa
Also add TODOs to README
