# apidocs/openapi.json
@@ -11,36 +11,6 @@
     }
   ],
   "paths": {
-    "/.well-known/openid-configuration": {
-      "get": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/jwks": {
-      "get": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/profile/card": {
-      "get": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
     "/inbox": {
       "post": {
         "description": "",
