# src/app.ts
@@ -1,6 +1,7 @@
 import { bodyParser } from '@koa/bodyparser'
 import cors from '@koa/cors'
 import Router from '@koa/router'
+import { solidIdentity } from '@soid/koa'
 import Koa from 'koa'
 import helmet from 'koa-helmet'
 import serve from 'koa-static'
@@ -11,7 +12,6 @@ import {
 } from './controllers/processThing.js'
 import { queryThings } from './controllers/query.js'
 import { initializeDatabase } from './database.js'
-import { fullJwkPublicKey } from './identity.js'
 import { authorizeGroups } from './middlewares/authorizeGroup.js'
 import { AppConfig, loadConfig } from './middlewares/loadConfig.js'
 import { solidAuth } from './middlewares/solidAuth.js'
@@ -19,39 +19,16 @@ import { validateBody } from './middlewares/validate.js'
 import * as schema from './schema.js'
 
 const createApp = async (config: AppConfig) => {
+  const identity = solidIdentity(config.webId)
+
   await initializeDatabase(config.database)
 
   const app = new Koa()
   app.proxy = config.isBehindProxy
   const router = new Router<{ config: AppConfig } & { user: string }>()
 
-  router.get('/.well-known/openid-configuration', async ctx => {
-    ctx.body = {
-      issuer: config.baseUrl,
-      jwks_uri: config.baseUrl + '/jwks',
-      response_types_supported: ['id_token', 'token'],
-      scopes_supported: ['openid', 'webid'],
-    }
-  })
-
-  router.get('/jwks', async ctx => {
-    ctx.body = { keys: [fullJwkPublicKey] }
-  })
-
-  router.get('/profile/card', async ctx => {
-    ctx.set('Content-Type', 'text/turtle')
-
-    ctx.body = `
-    @prefix solid: <http://www.w3.org/ns/solid/terms#>.
-    @prefix foaf: <http://xmlns.com/foaf/0.1/>.
-
-    <#bot>
-        a foaf:Agent;
-        solid:oidcIssuer <${config.baseUrl}>.
-  `
-  })
-
   router
+    .use(identity.routes())
     .post(
       '/inbox',
       solidAuth,
@@ -95,6 +72,7 @@ const createApp = async (config: AppConfig) => {
     .use(serve('./apidocs'))
     .use(router.routes())
     .use(router.allowedMethods())
+
   return app
 }
 
